# DeepCAC

./: fix_step3_weights.py  pyproject.toml
src/: run_step1_heart_localization.py  run_step2_heart_segmentation.py  run_step3_cac_segmentation.py  run_step4_cac_scoring_fixed.py
src/step1_heartloc/: downsample_data.py  export_data.py  heartloc_model.py  input_data_prep.py  run_inference.py  upsample_results.py
src/step2_heartseg/: compute_bbox.py  compute_metrics.py  crop_data.py  heartseg_model.py  input_data_prep.py  run_inference.py  upsample_results.py
src/step3_cacseg/: cacseg_model.py  crop_data.py  dilate_segmasks.py  load_test_data.py  run_inference.py
