[tool.poetry]
name = "deepcac"
version = "0.1.0"
description = "Deep learning-based Coronary Artery Calcium scoring"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "LICENSE"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
h5py = "^3.10.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
SimpleITK = "^2.3.1"
tables = "^3.9.0"
tensorflow = "^2.16.1"
keras = "^3.0.0"
pyyaml = "^6.0.1"
scikit-image = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 